--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -9,7 +9,9 @@
     "evergreen-ui": "^5.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-hover-image": "^2.0.1",
+    "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
