--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hover-image": "^2.0.1",
+    "react-responsive": "^8.1.0",
     "react-scripts": "3.4.3",
     "react-spring": "^8.0.27"
   },
